--- a/src/main/resources/fxml/project.fxml
+++ b/src/main/resources/fxml/project.fxml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane xmlns="http://javafx.com/javafx/17"
+<BorderPane xmlns="http://javafx.com/javafx/17"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.taskboard.controller.ProjectController">
-    <children>
-        <VBox alignment="CENTER" spacing="16" layoutX="100" layoutY="60">
+            fx:controller="com.taskboard.controller.ProjectController"
+            style="-fx-background-color: #f4f6fb; -fx-padding: 24; -fx-background-radius: 16;">
+    <center>
+        <VBox alignment="CENTER" spacing="18" maxWidth="900" style="-fx-background-color: #ffffff; -fx-padding: 36 48 36 48; -fx-background-radius: 16; -fx-effect: dropshadow(gaussian, #e0e0e0, 10, 0.2, 0, 2);">
             <HBox alignment="TOP_RIGHT">
                 <Button onAction="#onLogout" text="P" style="-fx-background-color: #1976d2; -fx-text-fill: white; -fx-font-size: 18px; -fx-font-weight: bold; -fx-background-radius: 16; -fx-min-width: 32px; -fx-min-height: 32px; -fx-max-width: 32px; -fx-max-height: 32px;" />
             </HBox>
-            <Label text="Choose or Create a Project" style="-fx-font-size: 20px; -fx-font-weight: bold;"/>
-            <TextField fx:id="tfProjectName" promptText="New project name"/>
-            <Button text="Create Project" onAction="#onCreateProject" style="-fx-background-color: #1976d2; -fx-text-fill: white; -fx-font-weight: bold;"/>
-            <Button text="Continue" onAction="#onContinue" style="-fx-background-color: #43a047; -fx-text-fill: white; -fx-font-weight: bold;"/>
+            <Label text="Choose or Create a Project" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #1976d2;"/>
+            <HBox spacing="16" alignment="CENTER_LEFT">
+                <TextField fx:id="tfProjectName" promptText="New project name" maxWidth="260"/>
+                <Button text="Create Project" onAction="#onCreateProject" style="-fx-background-color: #1976d2; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-font-size: 15px;" maxWidth="180"/>
+                <Button text="Continue" onAction="#onContinue" style="-fx-background-color: #43a047; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-font-size: 15px;" maxWidth="180"/>
+            </HBox>
             <Label fx:id="lblProjectError" textFill="red"/>
-            <TableView fx:id="tvProjects" prefHeight="120">
-                <columns>
-                    <TableColumn fx:id="colProjectName" text="Project Name" prefWidth="180" />
-                    <TableColumn fx:id="colProjectActions" text="Actions" prefWidth="120" />
-                </columns>
-            </TableView>
-            <TableView fx:id="tvProjectTasks" prefHeight="180">
-                <columns>
-                    <TableColumn fx:id="colTaskTitle" text="Title" prefWidth="180" />
-                    <TableColumn fx:id="colTaskStatus" text="Status" prefWidth="120" />
-                </columns>
-            </TableView>
+            <HBox spacing="24" alignment="CENTER">
+                <TableView fx:id="tvProjects" prefHeight="180" prefWidth="360" maxWidth="360" style="-fx-background-radius: 8;">
+                    <columns>
+                        <TableColumn fx:id="colProjectName" text="Project Name" prefWidth="220" />
+                        <TableColumn fx:id="colProjectActions" text="Actions" prefWidth="120" />
+                    </columns>
+                </TableView>
+                <TableView fx:id="tvProjectTasks" prefHeight="180" prefWidth="380" maxWidth="380" style="-fx-background-radius: 8;">
+                    <columns>
+                        <TableColumn fx:id="colTaskTitle" text="Title" prefWidth="220" />
+                        <TableColumn fx:id="colTaskStatus" text="Status" prefWidth="120" />
+                    </columns>
+                </TableView>
+            </HBox>
         </VBox>
-    </children>
-</AnchorPane>
+    </center>
+</BorderPane>
