add the user project sharing and show account infos

--- a/src/main/resources/fxml/taskDialog.fxml
+++ b/src/main/resources/fxml/taskDialog.fxml
@@ -21,9 +21,8 @@
             <Label text="Due Date:"    GridPane.rowIndex="3" GridPane.columnIndex="0"/>
             <DatePicker fx:id="dpDue"  GridPane.rowIndex="3" GridPane.columnIndex="1"/>
 
-
-            <Label fx:id="lblCurrentColumn" text="Column: " GridPane.rowIndex="4" GridPane.columnIndex="0" GridPane.columnSpan="2" style="-fx-font-weight: bold;"/>
-
+            <Label text="Column:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+            <ComboBox fx:id="cbColumn" GridPane.rowIndex="4" GridPane.columnIndex="1" promptText="Select column..."/>
 
             <Label text="Labels:"      GridPane.rowIndex="5" GridPane.columnIndex="0"/>
             <ComboBox fx:id="cbLabels" GridPane.rowIndex="5" GridPane.columnIndex="1" editable="true" promptText="Add/select label..."/>
